# DELBERT

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
configs/data_prep/pretrain/: example.yaml
configs/data_prep/supervised/: example.yaml
configs/experiment/: classify_example.yaml  pretrain_example.yaml
data/: WDR91_10-examples.parquet
delbert/: __init__.py
delbert/data/: __init__.py  cv_utils.py  processed_data_module.py  splits.py  tokenizer.py  transforms.py
delbert/models/: __init__.py  classification_model.py  delbert_model.py  finetuning_strategies.py  pretrain_model.py
evals/library_cv/: __init__.py
evals/library_cv/configs/: baseline_cv.yaml  transformer_cv.yaml
evals/library_cv/scripts/: evaluate_similarity_filtered.py  generate_balanced_fold_assignments.py  run_baseline_cv.py  run_transformer_cv_orchestrator.py  train_transformer_fold.py
inference/: inference_example.ipynb  predict.py
scripts/: prepare_pretrain_data.py  prepare_supervised_data.py  pretrain.py  train_classifier.py
